@@ -3,5 +3,5 @@
 {:paths ["src" "resources"]
  :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
          camel-snake-kebab/camel-snake-kebab {:mvn/version "0.4.3"}
-         io.opentelemetry/opentelemetry-api {:mvn/version "1.30.1"}
+         io.opentelemetry/opentelemetry-api {:mvn/version "1.31.0"}
          io.opentelemetry.semconv/opentelemetry-semconv {:mvn/version "1.21.0-alpha"}}}
