@@ -686,8 +686,8 @@ For an example application `my-app` that exports traces only using OTLP over gRP
                      "-Dotel.metrics.exporter=none"
                      "-Dotel.logs.exporter=none"
                      "-Dotel.exporter.otlp.traces.protocol=grpc"]
-          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.30.1"}
-                       io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "1.30.0-alpha"}
+          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.31.0"}
+                       io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "1.31.0-alpha"}
                        io.grpc/grpc-netty-shaded                                  {:mvn/version "1.58.0"}
                        io.grpc/grpc-protobuf                                      {:mvn/version "1.58.0"}
                        io.grpc/grpc-stub                                          {:mvn/version "1.58.0"}}}}}
