@@ -19,10 +19,10 @@
            {:local/root "../../../../../clj-otel-instrumentation-runtime-telemetry-java17"}
 
            ;; OpenTelemetry exporter that uses OTLP
-           io.opentelemetry/opentelemetry-exporter-otlp {:mvn/version "1.30.1"}
+           io.opentelemetry/opentelemetry-exporter-otlp {:mvn/version "1.31.0"}
 
            ;; Automatically adds OpenTelemetry resources to exported telemetry
-           io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "1.30.0-alpha"}
+           io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "1.31.0-alpha"}
 
            ;; Pedestal HTTP server with Jetty integration
            io.pedestal/pedestal.interceptor {:mvn/version "0.6.0"}
