@@ -28,6 +28,8 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 - [ADD] Terse syntax alternatives for `span-opts` map parameter in `new-span!` and related functions that create spans.
 - [ADD] Convenience function `add-event!` to add an event to the bound or current span.
+- Bump deps
+* [MAINT] OpenTelemetry `1.31.0`
 
 === `0.2.4.1` (2023-10-01)
 
